FEAT: Add SKU into templates

--- a/locations/templates/locations/carbon_capture.html
+++ b/locations/templates/locations/carbon_capture.html
@@ -67,7 +67,7 @@
                     <span>{{ plant.genus }}</span>
                     <span>{{ plant.species }}</span>
                     <div>&#8364 {{ plant.price }}</div>
-                    <div>{{ plant.sku }}</div>
+                    <div>SKU: {{ plant.sku }}</div>
                 </a>
             {% endfor %}
         </div>
