FEAT: Show plant prices including vat on customer pages

--- a/plants/templates/plants/list_plants.html
+++ b/plants/templates/plants/list_plants.html
@@ -48,7 +48,7 @@
                     <div>{{ plant.common_name }}</div>
                     <span>{{ plant.genus }}</span>
                     <span>{{ plant.species }}</span>
-                    <div>&#8364 {{ plant.price }}</div>
+                    <div>&#8364 {{ plant.price }} ex VAT</div>
                     <div>SKU: {{ plant.sku }}</div>
                     <div>
                         <a href="{% url 'edit_plant' plant.id %}">Edit</a> |
