--- a/locations/templates/locations/carbon_capture.html
+++ b/locations/templates/locations/carbon_capture.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load basket_tools %}
 
 {% block head_title %}Associate plants with a location{% endblock %}
 
@@ -66,7 +67,7 @@
                     <div>{{ plant.common_name }}</div>
                     <span>{{ plant.genus }}</span>
                     <span>{{ plant.species }}</span>
-                    <div>&#8364 {{ plant.price }}</div>
+                    <div>&#8364 {{ plant.price | calc_vat | floatformat:2}} inc VAT</div>
                     <div>SKU: {{ plant.sku }}</div>
                 </a>
             {% endfor %}
