--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -27,7 +27,7 @@
       <div class="row">
           <div class="col">
               <strong><p class="mt-3 mb-1 text-black">
-                  Total: <span class="float-right">€{{ total|floatformat:2 }}</span>
+                  Total (inc VAT): <span class="float-right">€{{ total|floatformat:2 }}</span>
               </p></strong>
               <a href="{% url 'view_basket' %}" class="btn btn-black btn-block rounded-0">
                   <span class="text-uppercase">Go To Secure Checkout</span>
