FEAT: Show basket in success toast only when altering basket

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,6 +31,15 @@
     position: fixed;
     top: 80px;
     right: 15px;
+    z-index: 99999999999;
+}
+
+.hide-basket {
+    display: none;
+}
+
+.show-basket {
+    display: initial;
 }
 
 .success {
