--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,3 +1,5 @@
+{% load basket_tools %}
+
 <div class="toast align-items-center success" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
     <div class="d-flex">
       <div class="toast-body">Success</div>
@@ -6,6 +8,7 @@
     </div>
   <!-- Toast template provided by Code Institute -->
   {% if grand_total and not on_profile_page %}
+    <div{% if message.tags %} class='hide-basket {{ message.tags }}'{% endif %}>
       <p class="logo-font bg-white text-black py-1">Your Basket ({{ plant_count }})</p>
       <div class="bag-notification-wrapper">
           {% for item in basket_items %}
@@ -27,7 +30,7 @@
       <div class="row">
           <div class="col">
               <strong><p class="mt-3 mb-1 text-black">
-                  Total (inc VAT): <span class="float-right">€{{ total|floatformat:2 }}</span>
+                  Total (inc VAT): <span class="float-right">€{{ total | calc_vat | floatformat:2 }} inc VAT</span>
               </p></strong>
               <a href="{% url 'view_basket' %}" class="btn btn-black btn-block rounded-0">
                   <span class="text-uppercase">Go To Secure Checkout</span>
@@ -37,6 +40,7 @@
               </a>
           </div>
       </div>
+    </div>
   {% endif %}
   <!-- End of toast template provided by Code Institute -->
 </div>
