FEAT: Update server error template

--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -6,6 +6,6 @@
 
 {% block content %}
     <div>Error: 500</div>
-    <div>Sorry, there wass a server error</div>
+    <div>Sorry, there was a server error</div>
     <a class="nav-link error-page-link" href="{% url 'home' %}">Home</a>
 {% endblock %}
