--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,9 @@
         <!-- css links -->
         <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous"> -->
-        <script src="{% static 'js/libraries/bootstrap_5_3_0/css/bootstrap.min.css' %}"></script>  
+        <link href="{% static 'css/libraries/bootstrap_5_3_0/css/bootstrap.min.css' %}" rel="stylesheet">  
         <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <link href="{% static 'css/style.css' %}" rel="stylesheet">
         {% block extra_css %}
         {% endblock %}
         <!-- js links  -->
