--- a/templates/base.html
+++ b/templates/base.html
@@ -14,18 +14,18 @@
         <!-- Favicon image supplied by https://favicon.io/favicon-generator/ -->
         <link rel="icon" sizes="any" href="{% static 'favicon.ico' %}">
         <!-- css links -->
-        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous"> -->
-        <link href="{% static 'css/libraries/bootstrap_5_3_0/css/bootstrap.min.css' %}" rel="stylesheet">  
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+        <!-- <link href="{% static 'css/libraries/bootstrap_5_3_0/css/bootstrap.min.css' %}" rel="stylesheet">   -->
         <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
         <link href="{% static 'css/style.css' %}" rel="stylesheet">
         {% block extra_css %}
         {% endblock %}
         <!-- js links  -->
         <script src="https://kit.fontawesome.com/e12aa4c3b2.js" crossorigin="anonymous"></script>
-        <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script> -->
-        <script src="{% static 'js/libraries/bootstrap_5_3_0/js/bootstrap.bundle.min.js' %}"></script>             
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+        <!-- <script src="{% static 'js/libraries/bootstrap_5_3_0/js/bootstrap.bundle.min.js' %}"></script>              -->
         <!-- Stripe -->
         <script src="https://js.stripe.com/v3/"></script>
     </head>
