--- a/templates/base.html
+++ b/templates/base.html
@@ -16,16 +16,12 @@
         <!-- css links -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-        <!-- <link href="{% static 'css/libraries/bootstrap_5_3_0/css/bootstrap.min.css' %}" rel="stylesheet">   -->
         <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
         <link href="{% static 'css/style.css' %}" rel="stylesheet">
         {% block extra_css %}
         {% endblock %}
         <!-- js links  -->
         <script src="https://kit.fontawesome.com/e12aa4c3b2.js" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-        <!-- <script src="{% static 'js/libraries/bootstrap_5_3_0/js/bootstrap.bundle.min.js' %}"></script>              -->
         <!-- Stripe -->
         <script src="https://js.stripe.com/v3/"></script>
     </head>
@@ -193,7 +189,11 @@
                 </div>
             </section>
         </div>
-        <script src="{% static 'js/libraries/jquery_3_7_0/jquery_3_7_0.js' %}"></script>        
+        <!-- js Libraries -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+        <script src="{% static 'js/libraries/jquery_3_7_0/jquery_3_7_0.js' %}"></script> 
+        <!-- Custom js        -->
         <script src="{% static 'js/wild_carbon/base.js' %}"></script>
         {% block extra_js %}
         {% endblock %}
