--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,6 @@
         <!-- css links -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-        <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
         <link href="{% static 'css/style.css' %}" rel="stylesheet">
         {% block extra_css %}
         {% endblock %}
@@ -191,11 +190,12 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
         <script src="{% static 'js/libraries/jquery_3_7_0/jquery_3_7_0.js' %}"></script>
-        <!-- Stripe js -->
-        <script src="https://js.stripe.com/v3/" defer></script>
+        <!-- <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script> -->
         <!-- Custom js -->
         <script src="{% static 'js/wild_carbon/base.js' %}"></script>
         {% block extra_js %}
         {% endblock %}
+        <!-- Stripe js -->
+        <script src="https://js.stripe.com/v3/" async></script>
     </body>
 </html>
