--- a/templates/base.html
+++ b/templates/base.html
@@ -190,12 +190,11 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
         <script src="{% static 'js/libraries/jquery_3_7_0/jquery_3_7_0.js' %}"></script>
-        <!-- <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script> -->
         <!-- Custom js -->
         <script src="{% static 'js/wild_carbon/base.js' %}"></script>
         {% block extra_js %}
         {% endblock %}
         <!-- Stripe js -->
-        <script src="https://js.stripe.com/v3/" async></script>
+        <script src="https://js.stripe.com/v3/"></script>
     </body>
 </html>
