FEAT: Update mailchimp newsletter form styles

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -33,24 +33,30 @@
             </p>
         </div>
     </div>
-    <a href="{% url 'carbon_capture' %}" class="carbon-capture-image-nav-container image-nav-container">
-        <div class="image-nav-title">
-            <div class="image-nav-title-main">Carbon Capture</div>
-            <div class="image-nav-title-secondary">Commission the growing and planting of trees at our location in the west of Ireland</div>
-        </div>
-    </a>
-    <a href="{% url 'about_us' %}" class="image-nav-container about-us-image-nav-container">
-        <div class="image-nav-title">
-            <div class="image-nav-title-main">About Us</div>
-            <div class="image-nav-title-secondary">Get to know the team waiting to grow your trees</div>
-        </div>
-    </a>
-    <a href="{% url 'how_it_works' %}" class="image-nav-container how-it-works-image-nav-container">
-        <div class="image-nav-title">
-            <div class="image-nav-title-main">How it Works</div>
-            <div class="image-nav-title-secondary">Learn more about our service</div>
-        </div>
-    </a>
+    <div class="content-container image-nav-outer-container">
+        <a href="{% url 'carbon_capture' %}" class="content-container carbon-capture-image-nav-container image-nav-container">
+            <div class="image-nav-title">
+                <div class="image-nav-title-main">Carbon Capture</div>
+                <div class="image-nav-title-secondary">Commission the growing and planting of trees at our location in the west of Ireland</div>
+            </div>
+        </a>
+    </div>
+    <div class="content-container image-nav-outer-container">
+        <a href="{% url 'about_us' %}" class="content-container image-nav-container about-us-image-nav-container">
+            <div class="image-nav-title">
+                <div class="image-nav-title-main">About Us</div>
+                <div class="image-nav-title-secondary">Get to know the team waiting to grow your trees</div>
+            </div>
+        </a>
+    </div>
+    <div class="content-container image-nav-outer-container">
+        <a href="{% url 'how_it_works' %}" class="content-container image-nav-container how-it-works-image-nav-container">
+            <div class="image-nav-title">
+                <div class="image-nav-title-main">How it Works</div>
+                <div class="image-nav-title-secondary">Learn more about our service</div>
+            </div>
+        </a>
+    </div>
     <div class="content-container">
         <div class="inner-content-container">
             <h2 class="content-header">Coming Soon</h2>
@@ -75,14 +81,13 @@
             <!-- Mailchimp HTML provided by Mailchimp https://mailchimp.com/ -->
             <div id="mc_embed_shell">
                 <div id="mc_embed_signup" class="mc_embed_signup ">
-                    <form action="https://herokuapp.us8.list-manage.com/subscribe/post?u=1f0650f50e5ef942f8fbd1d5d&amp;id=0e3cd3ba55&amp;f_id=00e17ce0f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+                    <form action="https://herokuapp.us8.list-manage.com/subscribe/post?u=1f0650f50e5ef942f8fbd1d5d&amp;id=0e3cd3ba55&amp;f_id=00e17ce0f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate mailchimp-form" target="_blank">
                         <div id="mc_embed_signup_scroll">
                             <h2>Subscribe</h2>
                             <div class="indicates-required"></div>
-                            <span class="asterisk">*</span>
                         </div>
                         <div class="mc-field-group">
-                            <label for="mce-EMAIL">Email Address<span class="asterisk">*</span></label>
+                            <label for="mce-EMAIL">Email Address</label>
                             <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value="">
                             <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
                         </div>
@@ -96,12 +101,7 @@
                         </div>
                         <div class="optionalParent">
                             <div class="clear foot">
-                                <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
-                                <!-- <p class="brandingLogo" style="margin: 0px auto;">
-                                    <a href="http://eepurl.com/iuFWRU" title="Mailchimp - email marketing made easy and fun">
-                                        <img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg" alt="referral badge">
-                                    </a>
-                                </p> -->
+                                <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button mc-button" value="Subscribe">
                             </div>
                         </div>
                     </form>
