--- a/templates/base.html
+++ b/templates/base.html
@@ -34,8 +34,8 @@
                     </div>
                     <div class="header-nav-logo">
                         <a class="navbar-brand" href="{% url 'home' %}">
-                            <span class="logo-company"><strong>Wild</strong></span>
-                            <span class="logo-company"><strong>Carbon</strong></span>
+                            <span class="logo-company">Wild</span>
+                            <span class="logo-company">Carbon</span>
                             <div class="logo-tagline">Rewild your way to carbon neutrality</div>
                         </a>
                     </div>
