--- a/templates/base.html
+++ b/templates/base.html
@@ -172,7 +172,7 @@
                         <h2>Contact Us</h2>
                         <div>Mayo, Ireland</div>
                         <div class="contact-email">wild.carbon.sequestration@gmail.com</div>
-                        <button id="contact-us-close-button" class="contact-us-close-button">Done</button>
+                        <button id="contact-us-close-button" class="contact-us-close-button  button light-button">Done</button>
                     </div>
                 </div>
             </section>
@@ -181,7 +181,7 @@
                 <div class="privacy-policy-inner-container">
                     <div class="privacy-policy-modal">
                         {% include 'includes/privacy_policy.html' %}
-                        <button id="privacy-policy-close-button" class="privacy-policy-close-button button">Done</button>
+                        <button id="privacy-policy-close-button" class="privacy-policy-close-button button light-button">Done</button>
                     </div>
                 </div>
             </section>
