--- a/templates/errors/403.html
+++ b/templates/errors/403.html
@@ -5,7 +5,14 @@
 {% block main_style %}main-container-offset{% endblock %}
 
 {% block content %}
-    <div>Error: 403</div>
-    <div>Sorry, permission is denied</div>
-    <a class="nav-link error-page-link" href="{% url 'home' %}">Home</a>
+
+    <div class="content-container error-content-container">
+        <div class="inner-content-container inner-error-container">
+            <h2 class="content-header">Error: 403</h2>
+            <p class="text-content">
+                Sorry, permission is denied         
+            </p>
+            <a class="nav-link error-page-link button" href="{% url 'home' %}">Home</a>
+        </div>
+    </div>
 {% endblock %}
