--- a/templates/errors/403.html
+++ b/templates/errors/403.html
@@ -5,14 +5,13 @@
 {% block main_style %}main-container-offset{% endblock %}
 
 {% block content %}
-
     <div class="content-container error-content-container">
         <div class="inner-content-container inner-error-container">
             <h2 class="content-header">Error: 403</h2>
             <p class="text-content">
                 Sorry, permission is denied         
             </p>
-            <a class="nav-link error-page-link button" href="{% url 'home' %}">Home</a>
+            <a class="nav-link error-page-link button link-button" href="{% url 'home' %}">Home</a>
         </div>
     </div>
 {% endblock %}
