--- a/locations/templates/locations/carbon_capture.html
+++ b/locations/templates/locations/carbon_capture.html
@@ -12,9 +12,9 @@
 
 {% block content %}
     <div class="page-title-container carbon-capture-title-container">
-        <div class="page-title">
+        <div class="page-title location-title">
             <h1 class="page-title-main">Carbon Capture</h1>
-            <h2 class="page-title-secondary">Commission the growing and planting of trees at our location in the west of Ireland</h2>
+            <div class="page-title-secondary location-page-title-secondary">Commission the growing and planting of trees at our location in the west of Ireland</div>
         </div>
     </div>
     <div class="content-container">
@@ -29,48 +29,54 @@
             </p>
         </div>
     </div>
-    <h2>Available Plants</h2>
-    <!-- Search box and sort box HTML supplied by Code Institute -->
-    <div>
-        <form id="search" method="GET" action="{% url 'carbon_capture' %}">
-            <div class="input-group w-50">
-                <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
-                <div class="input-group-append">
-                    <button class="form-control btn btn-black border border-black rounded-0" type="submit">
-                        <span class="icon">
-                            <i class="fas fa-search"></i>
-                        </span>
-                    </button>
+    <div class="content-container">
+        <div class="inner-content-container">
+            <h2 class="content-header">Available Plants</h2>
+            <div>
+                <!-- Search box and sort box HTML supplied by Code Institute -->
+                <div class="location-search-input">
+                    <form id="search" class="search-form" method="GET" action="{% url 'carbon_capture' %}">
+                        <div class="input-group">
+                            <input class="form-control search-input" type="text" name="q" placeholder="Search our site">
+                            <div class="input-group-append">
+                                <button class="form-control button search-button" type="submit">
+                                    <span class="icon">
+                                        <i class="fas fa-search"></i>
+                                    </span>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="sort-select-wrapper w-50">
+                    <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                        <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
+                        <option value="price__asc" {% if current_sorting == 'price__asc' %}selected{% endif %}>Price (low to high)</option>
+                        <option value="price__desc" {% if current_sorting == 'price__desc' %}selected{% endif %}>Price (high to low)</option>
+                        <option value="common_name__asc" {% if current_sorting == 'common_name__asc' %}selected{% endif %}>Name (A-Z)</option>
+                        <option value="common_name__desc" {% if current_sorting == 'common_name__desc' %}selected{% endif %}>Name (Z-A)</option>
+                    </select>
+                </div>
+                <!-- End of search box and sort box HTML supplied by Code Institute -->
+                <div class="plant-list-container">
+                    <div class="plant-list">
+                        {% for plant in plants %}
+                            <a  href="{% url 'plant_detail' location.pk plant.pk %}" class="plant-instance shop-plant-instance">
+                                {% if plant.image %}
+                                    <img class="plant-image" src="{{ plant.image.url }}" alt="{{ plant.common_name }}">
+                                {% else %}
+                                    <img class="plant-image" src="{{ MEDIA_URL }}noimage.png" alt="{{ plant.common_name }}">
+                                {% endif %}
+                                <div>{{ plant.common_name }}</div>
+                                <span>{{ plant.genus }}</span>
+                                <span>{{ plant.species }}</span>
+                                <div>&#8364; {{ plant.price | calc_vat | floatformat:2 }} inc VAT</div>
+                                <div>SKU: {{ plant.sku }}</div>
+                            </a>
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
-        </form>
-    </div>
-    <div class="sort-select-wrapper w-50">
-        <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
-            <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
-            <option value="price__asc" {% if current_sorting == 'price__asc' %}selected{% endif %}>Price (low to high)</option>
-            <option value="price__desc" {% if current_sorting == 'price__desc' %}selected{% endif %}>Price (high to low)</option>
-            <option value="common_name__asc" {% if current_sorting == 'common_name__asc' %}selected{% endif %}>Name (A-Z)</option>
-            <option value="common_name__desc" {% if current_sorting == 'common_name__desc' %}selected{% endif %}>Name (Z-A)</option>
-        </select>
-    </div>
-    <!-- End of search box and sort box HTML supplied by Code Institute -->
-    <div class="plant-list-container">
-        <div class="plant-list">
-            {% for plant in plants %}
-                <a  href="{% url 'plant_detail' location.pk plant.pk %}" class="plant-instance shop-plant-instance">
-                    {% if plant.image %}
-                        <img class="plant-image" src="{{ plant.image.url }}" alt="{{ plant.common_name }}">
-                    {% else %}
-                        <img class="plant-image" src="{{ MEDIA_URL }}noimage.png" alt="{{ plant.common_name }}">
-                    {% endif %}
-                    <div>{{ plant.common_name }}</div>
-                    <span>{{ plant.genus }}</span>
-                    <span>{{ plant.species }}</span>
-                    <div>&#8364 {{ plant.price | calc_vat | floatformat:2 }} inc VAT</div>
-                    <div>SKU: {{ plant.sku }}</div>
-                </a>
-            {% endfor %}
         </div>
     </div>
 {% endblock%}
