--- a/locations/templates/locations/carbon_capture.html
+++ b/locations/templates/locations/carbon_capture.html
@@ -48,8 +48,8 @@
                         </div>
                     </form>
                 </div>
-                <div class="sort-select-wrapper w-50">
-                    <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                <div class="sort-select-wrapper">
+                    <select id="sort-selector" class="custom-select custom-select-sm selector border">
                         <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
                         <option value="price__asc" {% if current_sorting == 'price__asc' %}selected{% endif %}>Price (low to high)</option>
                         <option value="price__desc" {% if current_sorting == 'price__desc' %}selected{% endif %}>Price (high to low)</option>
