--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,15 +1,15 @@
 {% load basket_tools %}
 
-<div class="toast align-items-center success" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
+<div class="toast align-items-center success" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
     <div class="d-flex">
       <div class="toast-body">Success</div>
-      <div>{{ message }}</div>
+      <div class="toast-message">{{ message }}</div>
       <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
   <!-- Toast template provided by Code Institute -->
   {% if grand_total and not on_profile_page %}
-    <div{% if message.tags %} class='hide-basket {{ message.tags }}'{% endif %}>
-      <p class="logo-font bg-white text-black py-1">Your Basket ({{ plant_count }})</p>
+    <div class='toast-basket{% if message.tags %} hide-basket{{ message.tags }}{% endif %}'>
+      <p class="py-1">Your Basket ({{ plant_count }})</p>
       <div class="bag-notification-wrapper">
           {% for item in basket_items %}
               <div class="row">
@@ -22,17 +22,17 @@
                   </div>
                   <div class="col-9">
                       <p class="my-0"><strong>{{ item.plant.common_name }}</strong></p>
-                      <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
+                      <p class="my-0">Qty: {{ item.quantity }}</p>
                   </div>
               </div>
           {% endfor %}
       </div>
       <div class="row">
           <div class="col">
-              <strong><p class="mt-3 mb-1 text-black">
+              <strong><p class="mt-3 mb-1">
                   Total (inc VAT): <span class="float-right">€{{ total | calc_vat | floatformat:2 }} inc VAT</span>
               </p></strong>
-              <a href="{% url 'view_basket' %}" class="btn btn-black btn-block rounded-0">
+              <a href="{% url 'view_basket' %}" class="button toast-button">
                   <span class="text-uppercase">Go To Secure Checkout</span>
                   <span class="icon">
                       <i class="fas fa-lock"></i>
